# vectorized-hash-tables

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  REPRODUCIBILITY.md
benchmark/: CMakeLists.txt
benchmark-include/benchmark/: benchmark_hashmaps_a.hpp  benchmark_hashmaps_b.hpp  benchmark_hashmaps_c.hpp  benchmark_hashmaps_d.hpp  benchmark_hashmaps_f.hpp  benchmark_hashmaps_g.hpp  benchmark_hashmaps_h.hpp  benchmark_hashmaps_i.hpp  benchmark_hashmaps_j.hpp  benchmark_hashmaps_k.hpp  benchmark_hashmaps_plain.hpp  benchmark_hashmaps_rep.hpp  benchmark_shared.hpp  benchmark_utils.hpp  perf_monitor.hpp  read_benchmark.hpp  write_benchmark.hpp
benchmark/app/: alignedness-bench.cpp  hugepage-bench.cpp  profile_app.cpp  read_bm_app.cpp  run_alignedness_bench.sh  run_hugepage_bench.sh  write_bm_app.cpp
benchmark/src/: benchmark_shared.cpp  benchmark_utils.cpp  perf_monitor.cpp  read_benchmark.cpp  write_benchmark.cpp
cmake/: Folly_FixedCMakeLists.txt  build_folly_deps.sh  dependencies.cmake  fix_f14.sh  fix_folly_boost.sh
cmake/compile_tests/: sve_size.cpp
include/hashmap/: simd_utils.hpp  utils.hpp
include/hashmap/entries/: aosentry.hpp
include/hashmap/hashes/: buckethash.hpp  hasher.hpp  identity.hpp  multaddshifthasher.hpp  multshifthasher.hpp  murmurhasher.hpp  statichasher.hpp  stdhasher.hpp  xxhasher.hpp
include/hashmap/hashmaps/: abseil.hpp  bucketing_simd.hpp  chained.hpp  f14.hpp  fingerprinting_simd_soa.hpp  hashmap.hpp  linear_probing_aos.hpp  linear_probing_soa.hpp  linear_probing_soa_packed.hpp  martinus.hpp  quadratic_probing_aos.hpp  recalc_robin_hood_aos.hpp  simple_simd_soa.hpp  storing_robin_hood_aos.hpp
include/hashmap/misc/: stringkey.hpp
notebooks/: AdditionalAnalysis.ipynb  PaperPlots.ipynb
notebooks/data/v1/: basic_reads_amd.csv  basic_reads_arm.csv  basic_reads_intel.csv  basic_reads_power.csv  basic_writes_amd.csv  basic_writes_arm.csv  basic_writes_intel.csv  basic_writes_power.csv  dense_reads_amd.csv  dense_reads_arm.csv  dense_reads_intel.csv  dense_reads_power.csv  dense_writes_amd.csv  dense_writes_arm.csv  dense_writes_intel.csv  dense_writes_power.csv  dummy_reads_amd.csv  dummy_reads_arm.csv  dummy_reads_intel.csv  dummy_reads_power_p1.csv  dummy_reads_power_p2.csv  dummy_writes_amd.csv  dummy_writes_arm.csv  dummy_writes_intel.csv  dummy_writes_power.csv  dummyptr_reads_amd.csv  dummyptr_reads_arm.csv  dummyptr_reads_intel.csv  dummyptr_reads_power.csv  dummyptr_writes_amd.csv  dummyptr_writes_arm.csv  dummyptr_writes_intel.csv  dummyptr_writes_power.csv  dummytuple128_reads_amd.csv  dummytuple128_writes_amd.csv  dummyvalue128ptr_reads_amd.csv  dummyvalue128ptr_writes_amd.csv  metadata.csv  mt_reads_amd.csv  mt_reads_arm.csv  (+26 more)
playground/: main.cpp
reproducibility/: collect_results.sh  environment.yml  gen_plots.py  run_bms.sh
scripts/: clang-tidy.sh  format.sh
src/: CMakeLists.txt  utils.cpp
src/misc/: stringkey.cpp
test/: CMakeLists.txt  hashmap_test.cpp
test/unit/hashmaps/: bucketing_simd_test.cpp  chained_test.cpp  external_hashmap_test.cpp  fingerprinting_simd_test.cpp  hashers.hpp  hashmap_test_impl.hpp  linear_probing_aos_test.cpp  linear_probing_soa_packed_test.cpp  linear_probing_soa_test.cpp  quadratic_probing_aos_test.cpp  robin_hood_aos_test.cpp  simple_simd_test.cpp
test/unit/other/: simd_utils_test.cpp
